[gd_scene load_steps=7 format=3 uid="uid://biktus3g67atr"]

[ext_resource type="Script" path="res://Planet.gd" id="1"]
[ext_resource type="OccluderPolygon2D" path="res://OccluderPoly1.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://blb8towr2y86e" path="res://parallax-space-big-planet.png" id="3"]

[sub_resource type="PhysicsMaterial" id="1"]
friction = 0.01
bounce = 0.01

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mcs1"]
size = Vector2(1.0075e+06, 806620)

[sub_resource type="CircleShape2D" id="3"]
radius = 43.8944

[node name="Planet" type="RigidBody2D" groups=["planet"]]
mass = 100.0
physics_material_override = SubResource("1")
can_sleep = false
lock_rotation = true
max_contacts_reported = 5
contact_monitor = true
script = ExtResource("1")

[node name="Gravity" type="Area2D" parent="."]
gravity_point = true
gravity_point_unit_distance = 1.0
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 100.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gravity"]
visible = false
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_0mcs1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("3")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(-8, -11)
occluder = ExtResource("2")

[node name="Line2DVeloc" type="Line2D" parent="."]
light_mask = 0
points = PackedVector2Array(0, 0, 200, 0)
width = 6.0
default_color = Color(0, 0, 1, 1)

[node name="Line2DTangent" type="Line2D" parent="."]
visible = false
light_mask = 0
points = PackedVector2Array(0, 0, 200, 0)
width = 6.0
default_color = Color(1, 0, 0.984314, 0.756863)

[node name="Line2DDistance" type="Line2D" parent="."]
self_modulate = Color(1, 1, 1, 0.34902)
light_mask = 0
points = PackedVector2Array(0, 0, 200, 0)
width = 8.0

[node name="Label" type="Label" parent="."]
offset_left = 44.0
offset_top = -136.083
offset_right = 96.0
offset_bottom = -114.083
scale = Vector2(6, 6)
theme_override_colors/font_color = Color(0.937255, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "5"

[node name="Label2" type="Label" parent="."]
offset_left = 44.0
offset_top = 13.9259
offset_right = 96.0
offset_bottom = 35.9259
scale = Vector2(6, 6)
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "1"

[node name="Label3" type="Label" parent="."]
offset_left = -399.574
offset_top = -162.077
offset_right = -347.574
offset_bottom = -140.077
scale = Vector2(6, 6)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "1"

[node name="Label4" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.427451)
offset_left = -399.574
offset_top = 43.5
offset_right = -347.574
offset_bottom = 65.5
scale = Vector2(6, 6)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "1"

[node name="Node2Dorbit" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.0784314)

[node name="nodeEllipse" type="Node2D" parent="Node2Dorbit"]

[node name="Line2Dpath" type="Line2D" parent="."]
self_modulate = Color(1, 1, 1, 0.0901961)
width = 8.0
default_color = Color(1, 0, 0, 1)

[connection signal="body_shape_entered" from="." to="." method="_on_Planet_body_shape_entered"]
